--- a/coreparation.html
+++ b/coreparation.html
@@ -8,11 +8,11 @@
 		content="Carte des commerces de vente en vrac en Loire-Atlantique destinée aux personnes souhaitant réduire leurs emballages et aux adeptes du Zéro Déchet." />
 		<meta name=”keywords” content="nantes, vrac, emballages, zéro déchets, magasin vrac, magasin zéro déchet" />
 		<meta property="og:title" content="Réparation" />
-		<meta property="og:site_name" content="Ateliers de co-réparation de Loire-Atlantique" />  
+		<meta property="og:site_name" content="Magasins de produits d'occasion (et boîte à don)" />  
 		<meta property="og:type" content="website" /> 
 		<meta property="og:url" content="http://www.coreparation44.fr" /> 
 		<meta property="og:image" content="logo-carte.png" /> 
-		<meta property="og:description" content="Carte des ateliers de co-réparation de Loire-Atlantique."  /> 
+		<meta property="og:description" content="Carte des Magasins de produits d'occasion (et boîte à don)."  /> 
 		<meta property="og:locale" content="fr_FR" />
 
 		<link rel="icon" type="image/png" href="logo.png" />
@@ -57,7 +57,7 @@
 					    <span></span>
 					</div>
 
-					<a href="#jumptomap"><h1 style='font-size:12px'>Ateliers de co-réparation de Loire-Atlantique</h1></a>
+					<a href="#jumptomap"><h1 style='font-size:12px'>Magasins de produits d'occasion (et boîte à don)</h1></a>
 
 					<ul id="menu" class="menu">
 						<a href="#jumptomap" onclick="closeMenu()" title="Carte magasins vrac"><li>Carte</li></a>
