Meileures gestions des couches pour cartoccase.fr

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				<a class="anchor" id="api"></a>
 				<h2>API</h2>
 					<p>
-				- La requête pour récupérer les données <a href='http://overpass-api.de/api/interpreter?data=[out:json];(area[%22ISO3166-1%22=%22FR%22];)-%3E.searchArea;(node[%22amenity%22=%22givebox%22];node[%22second_hand%22=%22only%22](area.searchArea););out;' target=_new>requête overpass</a>.<br />
+				- La requête pour récupérer les données <a href='http://overpass-api.de/api/interpreter?data=[out:json];(area[%22ISO3166-1%22=%22FR%22];)-%3E.searchArea;(node[%repair%22=%assisted_self_service%22](area.searchArea););out;' target=_new>requête overpass</a>.<br />
 				- Les données actuellement utilisées : <a href="http://www.cartoccase.fr/cache_data.json" target=_new>cache_data.json</a><br/>
 					</p>
 
